fixed error icon not showing and removed container spacing

--- a/ui.frontend/src/main/webpack/components/content/core-notification/v1/notification/style.scss
+++ b/ui.frontend/src/main/webpack/components/content/core-notification/v1/notification/style.scss
@@ -1,6 +1,13 @@
 @import 'bootstrap/scss/mixins';
 @import '@sunlife/ui-styles/design-system';
 
+.aem-AuthorLayer-Edit {
+
+    .sl-notification.fade {
+          opacity: 1;
+    }
+}
+
 .sl-notification {
 
     @include media-breakpoint-up(lg) {
